@@ -3833,3 +3833,4 @@
   build.xml, bug fixed, jminor-server-monitor.jar target did not include EntityConnectionServerAdminImpl_Stub.class
   build.xml, removed redundant domain package from jminor-server-monitor.jar
   build.xml, minor changes to deploy_server_monitor and deploy_generator targets
+  ClientUserMonitor refactoring
